--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -20,7 +20,7 @@
 			<h1>{{page.title}}</h1>
 			<p>{{page.author}} / {{page.date}}</p>
 			<button onclick="history.go(-1);">返回</button>
-			<img src="{{page.illustration}}">
+			<!--<img src="{{page.illustration}}">-->
 			{{ content }}
 		</div>
 	</blogBox>
