--- a/resource/css/blog_md.css
+++ b/resource/css/blog_md.css
@@ -108,9 +108,11 @@ blockquote {
   color: #828282;
   border-left: 4px solid #e8e8e8;
   padding-left: 15px;
-  font-size: 18px;
+  /*font-size: 18px;*/
+  font-size: 16px;
   letter-spacing: -1px;
-  font-style: italic; }
+  /*font-style: italic;*/
+}
   blockquote > :last-child {
     margin-bottom: 0; }
 
