--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <header>
     <div class="about">
       <div class="cover-author-image">
-        <a href="#"><img src="/resource/images/portrait.jpg" alt="Peng Chen"></a>
+        <a href="#"><img src="/peng/resource/images/portrait.jpg" alt="Peng Chen"></a>
       </div>
       <div class="author-name">Peng Chen</div>
       <p>海贼王に俺はなる</p>
@@ -17,8 +17,8 @@
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
       <div class="icon-group">
-        <a href="https://github.com/PengChen96"><img src="/resource/images/github.png" alt="github"></a>
-        <a href="https://juejin.im/user/58c39cfe44d9040069841629"><img src="/resource/images/juejin.png" alt="github"></a>
+        <a href="https://github.com/PengChen96"><img src="/peng/resource/images/github.png" alt="github"></a>
+        <a href="https://juejin.im/user/58c39cfe44d9040069841629"><img src="/peng/resource/images/juejin.png" alt="github"></a>
       </div>
     </section> <!-- End Section Contact -->
     <div class="copy-right">
