--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -22,7 +22,8 @@
 		<div class="contentBox">
 			<h1>{{page.title}}</h1>
 			<p>{{page.author}} / {{page.date}}</p>
-			<button onclick="history.go(-1);">返回</button>
+			<!--<button onclick="history.go(-1);">返回</button>-->
+            <br><hr><br>
 			<!--<img src="{{page.illustration}}">-->
 			{{ content }}
 		</div>
