--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -46,6 +46,24 @@
 			<!--<img src="{{page.illustration}}">-->
 			{{ content }}
 		</div>
+        <!-- 来必力City版安装代码 -->
+        <div id="lv-container" data-id="city" data-uid="MTAyMC80MDQ1OC8xNjk4NQ==">
+            <script type="text/javascript">
+                (function(d, s) {
+                    var j, e = d.getElementsByTagName(s)[0];
+
+                    if (typeof LivereTower === 'function') { return; }
+
+                    j = d.createElement(s);
+                    j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+                    j.async = true;
+
+                    e.parentNode.insertBefore(j, e);
+                })(document, 'script');
+            </script>
+            <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+        </div>
+        <!-- City版安装代码已完成 -->
 	</blogBox>
 	<!-- 底部 -->
 	<!--{% include footer.html %}-->
