--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -40,6 +40,13 @@
 			<h1>{{page.title}}</h1>
 			<p class="article-title" style="margin:0;line-height:32px;color:#aaa;">
 				{{page.author}}&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date| date: "%Y, %B %d" }}<!--{{page.date}} -->
+                <!--阅读数-->
+                {% if site.leancloud.enable %}
+                    <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
+                        <span class="post-meta-item-text">&nbsp;&nbsp;&nbsp;&nbsp;阅读:</span>
+                        <span class="leancloud-visitors-count"></span>
+                    </span>
+                {% endif %}
 			</p>
 			<!--<button onclick="history.go(-1);">返回</button>-->
             <div class="line"></div>
@@ -64,28 +71,11 @@
             <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
         </div>
         <!-- City版安装代码已完成 -->
-        <!-- 来必力City版安装代码 -->
-        <!--<div id="lv-container" data-id="city" data-uid="MTAyMC80MDQ1OC8xNjk4NQ==">-->
-            <!--<script type="text/javascript">-->
-                <!--var refer = "<?=get_permalink($id);?>".replace("http://","");-->
-                <!--(function(d, s) {-->
-                    <!--var j, e = d.getElementsByTagName(s)[0];-->
-
-                    <!--if (typeof LivereTower === 'function') { return; }-->
-
-                    <!--j = d.createElement(s);-->
-                    <!--j.src = 'https://cdn-city.livere.com/js/embed.dist.js';-->
-                    <!--j.async = true;-->
-
-                    <!--e.parentNode.insertBefore(j, e);-->
-                <!--})(document, 'script');-->
-            <!--</script>-->
-            <!--<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>-->
-        <!--</div>-->
-        <!-- City版安装代码已完成 -->
 	</blogBox>
 	<!-- 底部 -->
 	<!--{% include footer.html %}-->
+    <!--阅读数计算-->
+    {% include leancloud.html %}
 </div>
 </body>
 </html>
