--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,10 +31,19 @@
       <div class="icon-group">
         <!--<a href="tencent://message/?uin=2601349541&Site=qq&Menu=yes"><img src="/resource/images/qq.jpg" alt="qq"></a>-->
         <a href="https://github.com/PengChen96"><img src="/resource/images/github.png" alt="github"></a>
-        <a href="https://juejin.im/user/58c39cfe44d9040069841629/posts"><img src="/resource/images/juejin.png" alt="github"></a>
+        <a href="https://juejin.im/user/58c39cfe44d9040069841629/posts"><img src="/resource/images/juejin.png"
+                                                                             alt="github"></a>
       </div>
     </section> <!-- End Section Contact -->
     <div class="copy-right">
-      <p>2019 © Peng Chen</p>
+      <!--<p>2019 © Peng Chen</p>-->
     </div>
   </footer> <!-- End Footer -->
+
+  <script>
+    (function () {
+      const date = new Date();
+      const year = date.getFullYear();
+      document.getElementsByClassName('copy-right')[0].innerHTML = `<p>${year} © Peng Chen</p>`;
+    })();
+  </script>
